--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,6 +74,7 @@
             android:layout_margin="5dp"
             android:background="@color/white"
             android:ems="10"
+            android:textColor="#000000"
             android:hint="Correo"
             android:inputType="text"
             android:textSize="20dp" />
