--- a/app/src/main/res/layout/activity_recomendaciones_ej.xml
+++ b/app/src/main/res/layout/activity_recomendaciones_ej.xml
@@ -25,7 +25,7 @@
         android:id="@+id/LAYAUT"
         android:layout_width="356dp"
         android:layout_height="448dp"
-        android:background="#77A676"
+        android:background="@drawable/corner"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,85 +34,78 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.498">
 
-    </LinearLayout>
+        <LinearLayout
+            android:layout_width="356dp"
+            android:layout_height="448dp"
+            android:background="@drawable/corner"
+            android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="356dp"
-        android:layout_height="448dp"
-        android:background="#77A676"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.498">
-        <TextView
-            android:id="@+id/TVConsejo1"
-            android:text="Consejo 1"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginBottom="15dp"
-            android:gravity="center_horizontal"
-            android:textColor="@color/black"
-            android:textSize="20dp"
-            />
-        <TextView
-            android:id="@+id/TVdesc1"
-            android:text="Descripcion1"
-            android:layout_width="match_parent"
-            android:layout_height="65dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginBottom="15dp"
-            android:gravity="center_horizontal"
-            android:textColor="@color/black"
-            android:textSize="15dp"
-            />
+            <TextView
+                android:id="@+id/TVConsejo1"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
+                android:gravity="center_horizontal"
+                android:text="Consejo 1"
+                android:textColor="@color/black"
+                android:textSize="20dp" />
 
-        <TextView
-            android:id="@+id/TVConsejo2"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginBottom="15dp"
-            android:gravity="center_horizontal"
-            android:text="Consejo 2"
-            android:textColor="@color/black"
-            android:textSize="20dp" />
-        <TextView
-            android:id="@+id/TVdesc2"
-            android:text="Descripcion2"
-            android:layout_width="match_parent"
-            android:layout_height="65dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginBottom="15dp"
-            android:gravity="center_horizontal"
-            android:textColor="@color/black"
-            android:textSize="15dp"
-            />
-        <TextView
-            android:id="@+id/TVConsejo3"
-            android:text="Consejo 3"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginBottom="15dp"
-            android:gravity="center_horizontal"
-            android:textColor="@color/black"
-            android:textSize="20dp"
-            />
-        <TextView
-            android:id="@+id/TVdesc3"
-            android:text="Descripcion3"
-            android:layout_width="match_parent"
-            android:layout_height="65dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginBottom="15dp"
-            android:gravity="center_horizontal"
-            android:textColor="@color/black"
-            android:textSize="15dp"
-            />
+            <TextView
+                android:id="@+id/TVdesc1"
+                android:layout_width="match_parent"
+                android:layout_height="65dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
+                android:gravity="center_horizontal"
+                android:text="Descripcion1"
+                android:textColor="@color/black"
+                android:textSize="15dp" />
+
+            <TextView
+                android:id="@+id/TVConsejo2"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
+                android:gravity="center_horizontal"
+                android:text="Consejo 2"
+                android:textColor="@color/black"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/TVdesc2"
+                android:layout_width="match_parent"
+                android:layout_height="65dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
+                android:gravity="center_horizontal"
+                android:text="Descripcion2"
+                android:textColor="@color/black"
+                android:textSize="15dp" />
+
+            <TextView
+                android:id="@+id/TVConsejo3"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
+                android:gravity="center_horizontal"
+                android:text="Consejo 3"
+                android:textColor="@color/black"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/TVdesc3"
+                android:layout_width="match_parent"
+                android:layout_height="65dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
+                android:gravity="center_horizontal"
+                android:text="Descripcion3"
+                android:textColor="@color/black"
+                android:textSize="15dp" />
+        </LinearLayout>
     </LinearLayout>
 
     <TextView
@@ -163,13 +156,22 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="267dp"
-        android:layout_height="228dp"
-        android:layout_marginBottom="596dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView2"
+        android:id="@+id/imageView7"
+        android:layout_width="185dp"
+        android:layout_height="101dp"
+        android:layout_marginBottom="768dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/textView"
-        app:srcCompat="@mipmap/nutriasset_foreground" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@mipmap/bann_nutri_background" />
 
+    <ImageView
+        android:id="@+id/imageView8"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginBottom="76dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/comeback" />
 </androidx.constraintlayout.widget.ConstraintLayout>
