--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -15,8 +15,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
-        android:text="Menu principal"
         android:fontFamily="@font/anek_devanagari_medium"
+        android:text="Menú Principal"
         android:textColor="@color/black"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -75,11 +75,11 @@
             android:id="@+id/textView5"
             android:layout_width="match_parent"
             android:layout_height="107dp"
+            android:fontFamily="@font/anek_devanagari_medium"
             android:gravity="center_horizontal"
             android:onClick="seguimiento_ali"
             android:padding="20dp"
-            android:fontFamily="@font/anek_devanagari_medium"
-            android:text="Gestion de Alimentos"
+            android:text="Gestión de Alimentos"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="15dp" />
@@ -134,10 +134,10 @@
             android:layout_height="108dp"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="15dp"
-            android:gravity="center_horizontal"
             android:fontFamily="@font/anek_devanagari_medium"
+            android:gravity="center_horizontal"
             android:onClick="recomendaciones_ej"
-            android:text="Recomendacion de ejercicios"
+            android:text="Recomendación de ejercicios"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="15dp" />
