--- a/app/src/main/res/layout/activity_agregar_comida.xml
+++ b/app/src/main/res/layout/activity_agregar_comida.xml
@@ -49,9 +49,9 @@
             android:id="@+id/textView12"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="15dp"
-            android:text="Colacion"
             android:fontFamily="@font/anek_devanagari_medium"
+            android:paddingTop="15dp"
+            android:text="Colación"
 
             android:textAlignment="center"
             android:textColor="@color/black"
@@ -93,9 +93,9 @@
             android:id="@+id/textView14"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="15dp"
-            android:text="Colacion"
             android:fontFamily="@font/anek_devanagari_medium"
+            android:paddingTop="15dp"
+            android:text="Colación"
 
             android:textAlignment="center"
             android:textColor="@color/black"
