--- a/app/src/main/res/layout/activity_recomendaciones_ej.xml
+++ b/app/src/main/res/layout/activity_recomendaciones_ej.xml
@@ -58,7 +58,7 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="15dp"
                 android:gravity="center_horizontal"
-                android:text="Descripcion1"
+                android:text="Descripción1"
                 android:textColor="@color/black"
                 android:textSize="15dp" />
 
@@ -80,7 +80,7 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="15dp"
                 android:gravity="center_horizontal"
-                android:text="Descripcion2"
+                android:text="Descripción2"
                 android:textColor="@color/black"
                 android:textSize="15dp" />
 
@@ -102,7 +102,7 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="15dp"
                 android:gravity="center_horizontal"
-                android:text="Descripcion3"
+                android:text="Descripción3"
                 android:textColor="@color/black"
                 android:textSize="15dp" />
         </LinearLayout>
@@ -112,7 +112,7 @@
         android:id="@+id/recomenaciones"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Recomendaciones de ejercisios "
+        android:text="Recomendaciones de ejercicios "
         android:textColor="@color/black"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
