--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -14,7 +14,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="68dp"
         android:text="Notificaciones"
-        android:fontFamily="@font/anek_devanagari_medium"
         android:textColor="@color/black"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,7 +69,6 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <LinearLayout
-        android:fontFamily="@font/anek_devanagari_medium"
         android:id="@+id/linearLayout2"
         android:layout_width="356dp"
         android:layout_height="448dp"
@@ -91,16 +89,16 @@
             android:layout_marginTop="15dp"
             android:layout_marginBottom="15dp"
             android:gravity="center_horizontal"
-            android:fontFamily="@font/anek_devanagari_medium"
             android:text="Notificaciones de los elementos"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="15dp" />
 
         <ListView
+            android:id="@+id/Notis"
             android:layout_width="345dp"
             android:layout_height="320dp"
-            android:fontFamily="@font/anek_devanagari_medium"/>
+            android:fontFamily="@font/anek_devanagari_medium" />
 
     </LinearLayout>
 
@@ -110,7 +108,6 @@
         android:layout_height="40dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="16dp"
-        android:onClick="User"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/user" />
