--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -204,6 +204,7 @@
         android:layout_width="185dp"
         android:layout_height="101dp"
         android:layout_marginBottom="768dp"
+        android:onClick="MenuP"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
